--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,12 @@ logging.level.root=INFO
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 minio.url=http://localhost:9000
-minio.access-key=minioadmin
-minio.secret-key=minioadmin
+minio.access-key=minhtt14
+minio.secret-key=12345678!
 minio.bucket-name=miniapartment
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ngongochung532@gmail.com
+spring.mail.password=suww rxea cpga lkls
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
