Add response entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 minio.url=http://localhost:9000
-minio.access-key=minhtt14
-minio.secret-key=12345678!
-minio.bucket-name=miniapartment
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket-name=miniApartment
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ngongochung532@gmail.com
