--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>minio</artifactId>
 			<version>8.5.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>4.9</version>
+		</dependency>
 
 	</dependencies>
 	<repositories>
