--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=miniApartment
 spring.datasource.url=jdbc:mysql://localhost:3306/miniapartment
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=27062003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -15,9 +15,9 @@ server.tomcat.relaxed-query-chars=|,{,},[,],^
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 minio.url=http://localhost:9000
-minio.access-key=minioadmin
-minio.secret-key=minioadmin
-minio.bucket-name=miniapartment
+minio.accessKey=minioadmin
+minio.secretKey=minioadmin
+minio.bucketName=miniapartment
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ngongochung532@gmail.com
